--- a/a/app/src/main/AndroidManifest.xml
+++ b/a/app/src/main/AndroidManifest.xml
@@ -9,5 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Project" />
-
+sdfkijghs;lidfhg;lishj;lfkj
+aopsidhjf;<aopsidhjf a;isjhdf=";kkahsdkjfh
+la;ksjhdlkfjhalskdjhf--s hdlfkjhalkjn jnliuycoigl kjd
+"></aopsidhjf>
 </manifest>
